회원가입, 회원정보에 소개글 추가